--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
+    "angular-owl-carousel2": "^1.0.6",
     "express": "^4.15.2",
     "massive": "^2.6.0"
   }
